app/assets/stylesheets/unembedded.scss
/* ... */
/* Sidebar Toggle */
.wittyEDFullscreenToggle {
  display: block;
  position: fixed;
  z-index: 1;
  top: 50%;
  left: 300px;
  width: 25px;
  height: 40px;
  margin-top: -20px;
  padding: 0;
  background: #ebeef0;
  border: 0;
  border-radius: 0 3px 3px 0;
  box-shadow: 1px 1px 4px rgba(0,0,0,0.12);
  clip: rect(-3px, 30px, 45px, 0);
  color: #212529;
  transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1);
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  
  &:hover, &:focus, &:active { background: #f5f6f7; color: $witty-teal; }
  
  .wittyEDFullscreenToggleIcon {
    position: absolute;
    top: 12px;
    left: 5px;
    margin: 0;
    
    .svg_dark { fill: $witty-dark; }
    .svg_teal { fill: $witty-teal; }
    
    &.next-icon--size-16 {
      width: 16px;
      height: 16px;
    }
  }
}

/* Media Queries */

@media screen and (min-width: 640px) {
  
  body {
    font-size: 1.4rem;
  }

  .wittyEDSidebar {
    .ui-heading {
      font-size: 1.6rem;
    }
    .ui-subheading {
      font-size: 1.2rem;
    }
  }
  
}

/* Styled Dropdown Popups */

.select-sim-dropdown-container {
  box-shadow: 0 0 0 1px rgba(39,44,48,0.05), 
              0 2px 7px 1px rgba(39,44,48,0.16);

  display: none;

  .select-sim.active + & {
    display: block;
  }
  
  .search-container {
    padding: 10px;
    border-bottom: 1px solid #ebeef0;
    position: relative;

    .icon-search {
      position: absolute;
      top: 20px;
      left: 20px;
      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' enable-background='new 0 0 16 16'%3E%3Cpath fill='rgb(149,167,183)' d='M0 5.667c0 3.125 2.542 5.667 5.667 5.667 1.202 0 2.315-.38 3.233-1.02l.455.456c-.07.5.082 1.025.466 1.41l3.334 3.332c.326.325.753.488 1.18.488.425 0 .852-.163 1.177-.488.652-.65.652-1.706 0-2.357L12.18 9.822c-.384-.384-.91-.536-1.41-.466l-.454-.456c.64-.918 1.02-2.03 1.02-3.233C11.333 2.542 8.79 0 5.666 0S0 2.542 0 5.667zm2 0C2 3.645 3.645 2 5.667 2s3.667 1.645 3.667 3.667-1.646 3.666-3.667 3.666S2 7.688 2 5.667z'%3E%3C/path%3E%3C/svg%3E");
    }

    input {padding-left: 34px;}
  }

  .select-sim-dropdown {
    list-style: none;
    margin: 0;

    li + li {border-top: 1px solid #ebeef0;}

    a, 
    span {
      padding: 10px 20px;
      display: block;
      color: #31373d;
    }

    a:hover {
      text-decoration: none;
      background: #eff9fd;
    }
  }

  .arrow-navigation {
    padding: 10px;
    border-top: 1px solid #ebeef0;

    button {
      float: left;

      &.icon-prev {border-radius: .3rem 0 0 .3rem;border-right: 0;}
      &.icon-next {border-radius: 0 .3rem .3rem 0;}
    }
  }
}

